src/test/deca/context/valid/homemade/test/test342_exemple_new.deca
// test valide de la règle 3.42



class A {
    int x;
}

{
    A a = new A();
}