src/test/deca/context/invalid/homemade/tests/test_non_implemented/test_invalid_instanceof_method.deca
// test invalide de la règle instance of

class A {
    int x =8;
    void calcul(){
        this.x = 3;
    }
}

{
    A a = new A();
    println(a.calcul() instanceof A);
}